--- a/apps/website/templates/website/components/section_title.html
+++ b/apps/website/templates/website/components/section_title.html
@@ -1,7 +1,6 @@
 {% comment %}
 PARAMETERS
-- templates:
-        - section_title:str
+    * section_title:str
 {% endcomment %}
 
 {# LOAD PACKAGES/TAGs #}
