--- a/apps/website/templates/website/pages/contact_page.html
+++ b/apps/website/templates/website/pages/contact_page.html
@@ -4,7 +4,7 @@
 {% load static %}
 
 {# Website title #}
-{% block title %}{{ block.super }} - Sobre mí{% endblock %}
+{% block title %}Contact | {{ block.super }}{% endblock %}
 
 {# -------------------------------- WEBPAGE CONTENT -------------------------------- #}
 {% block main-content %}
@@ -29,12 +29,12 @@
                 <div class="text-center">
                     <p>Prefer email me?</p>
                     <p class="text-2xl lg:text-3xl">
-                        <a href="{% if cms_base.email %} mailto:{{ cms_base.email }} {% else %} mailto:example@mail.com {% endif %}"
+                        <a href="mailto:{{ cms_base.email }}"
                            class="bg-clip-text text-transparent bg-gradient-to-r from-blue-700 to-violet-700
-                            md:text-black
-                            md:hover:text-transparent md:hover:bg-gradient-to-r md:hover:from-blue-700 md:hover:to-violet-700">
+                                md:text-black
+                                md:hover:text-transparent md:hover:bg-gradient-to-r md:hover:from-blue-700 md:hover:to-violet-700">
                             <i class="fa-solid fa-envelope-open-text"></i>
-                            {% if cms_base.email %} {{ cms_base.email }} {% else %} example@mail.com {% endif %}
+                            {{ cms_base.email }}
                         </a>
                     </p>
                 </div>
