--- a/apps/website/templates/website/errors/400.html
+++ b/apps/website/templates/website/errors/400.html
@@ -5,39 +5,26 @@
 {% load compress %}
 
 {# * Website Title #}
-{% block title %}{{ block.super }} - 400 {% endblock title %}
-
-{# * STATIC CSS | JS #}
-{% block css %}
-    {{ block.super }}
-    {# * ---- COMPONENTS STYLES ---- #}
-    {% compress css %}
-    {% endcompress %}
-{% endblock %}
-
-{% block javascript %}
-    {{ block.super }}
-    {# * ------ COMPONENTS JS ------ #}
-    {% compress js %}
-    {% endcompress %}
-{% endblock %}
+{% block title %}Error 400 | {{ block.super }}{% endblock title %}
 
 
 {# * ------------------------------- WEBPAGE CONTENT ------------------------------- #}
+
 {% block main-content %}
 
     <!----------------------------------------------------------
     Content Error Section
     ------------------------------------------------------------>
-    <section id="error-content">
+    <section class="container mx-auto mt-40 mb-10 px-5 md:px-10 py-20 rounded-xl bg-white shadow-xl">
 
-        <div id="message">
-            <h2>Error 400</h2>
-            <h1>Solicitud inválida</h1>
-            <p>Has realizado una solicitud inválida. Vuelve a intentarlo.</p>
+        <div class="w-fit h-fit mx-auto text-center">
+            <i class="fa-solid fa-bomb text-8xl text-red-700 m-5"></i>
+            <h1 class="text-xl font-semibold">BAD REQUEST</h1>
+            <h2 class="w-full rounded-xl bg-red-300 font-extrabold">Error 400</h2>
+            <p class="px-2">You sent an invalid request, this server cannot understand you.</p>
         </div>
 
     </section>
 
-{% endblock %}
+{% endblock main-content %}
 {# * ------------------------------------------------------------------------------- #}
