Configure Barba.js and Flowbite components to allow page transitions using ajax

--- a/apps/website/templates/website/base.html
+++ b/apps/website/templates/website/base.html
@@ -43,107 +43,29 @@
     {% block javascript %}
         <!-- VENDOR MINIFIED JS -->
         <script defer src="{% static 'js/vendor/typed.min.js' %}"></script>
+        <script defer src="{% static 'js/vendor/background_animated_gradient.js' %}"></script>
         {# Flowbite script #}
         <script defer src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
+        {# Barba script #}
+        <script defer src="https://unpkg.com/@barba/core@2.9.7"></script>
+        {# Gsap animation #}
+        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
 
         <!-- Main JS -->
         {% compress js %}
             <script defer src="{% static 'js/main.js' %}"></script>
-            <script defer src="{% static 'js/background_animated_gradient.js' %}"></script>
         {% endcompress %}
     {% endblock javascript %}
 
 </head>
 
-<body class="bg-gray-50 font-sans leading-relaxed tracking-normal">
+<body class="bg-gray-50 font-sans leading-relaxed tracking-normal" data-barba="wrapper">
 <!-----------------------------------------------------------------------------------------------
     Navbar
 ------------------------------------------------------------------------------------------------->
 <header>
     {% block header %}
-        <nav id="navbar"
-             class="w-screen md:h-16 px-3 py-2.5 fixed top-0 z-30
-              bg-gray-300 bg-opacity-30 backdrop-filter backdrop-blur-lg drop-shadow-lg
-              font-bold text-xl text-white
-              transition-[background-color] ease-in-out duration-300">
-            <div class="container h-full flex flex-wrap justify-between items-center mx-auto">
-                {# -------- Developer link -------- #}
-                <a href="/" class="flex items-center">
-                    <span class="self-center">
-                        {{ cms_base.brand }}
-                    </span>
-                </a>
-                <div class="flex items-center gap-x-3 md:order-2">
-                    {# -------- Social links -------- #}
-                    <a href="{{ cms_base.github }}"
-                       target="_blank"
-                       data-tooltip-target="tooltip-github" data-tooltip-placement="bottom" data-tooltip-style="light">
-                        <i class="fa-brands fa-github fa-lg"></i>
-                        <div id="tooltip-github" role="tooltip"
-                             class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-lg border border-gray-200 shadow-sm opacity-0 tooltip">
-                            Github
-                            <div class="tooltip-arrow" data-popper-arrow></div>
-                        </div>
-                    </a>
-                    <a href="{{ cms_base.linkedin }}"
-                       target="_blank"
-                       data-tooltip-target="tooltip-linkedin" data-tooltip-placement="bottom"
-                       data-tooltip-style="light">
-                        <i class="fa-brands fa-linkedin fa-lg"></i>
-                        <div id="tooltip-linkedin" role="tooltip"
-                             class="inline-block absolute invisible z-10 py-2 px-3 text-sm font-medium text-gray-900 bg-white rounded-lg border border-gray-200 shadow-sm opacity-0 tooltip">
-                            Linkedin
-                            <div class="tooltip-arrow" data-popper-arrow></div>
-                        </div>
-                    </a>
-
-                    {# -------- Menu button -------- #}
-                    <button id="navbar-mobile-menu" data-collapse-toggle="navbar-menu" type="button"
-                            class="inline-flex items-center p-2 text-md rounded-lg md:hidden
-                            hover:text-gray-500 hover:bg-gray-100 focus:outline-none focus:ring-2 focus:ring-gray-200"
-                            aria-controls="" aria-expanded="false">
-                        <span class="sr-only">Menu</span>
-                        <i class="fa-solid fa-bars"></i>
-                    </button>
-                </div>
-                {# -------- Menu entries -------- #}
-                <div id="navbar-menu" class="hidden justify-between items-center w-full md:flex md:w-auto md:order-1">
-                    <ul class="flex flex-col mt-4 md:flex-row md:space-x-8 md:mt-0">
-                        {# Add aria current if view_name match with the element url #}
-                        {% with request.resolver_match.view_name as view_name %}
-                            <li>
-                                <a href="{% url 'website:home' %}" class="block
-                                py-2 pr-4 pl-3 border-b hover:bg-white hover:bg-opacity-30
-                                md:px-3 md:py-1 md:border-0 md:hover:border-b md:hover:bg-transparent md:hover:drop-shadow-lg"
-                                        {% if view_name == 'website:home' %} aria-current="page" {% endif %}
-                                >Home</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'website:about' %}" class="block
-                                py-2 pr-4 pl-3 border-b hover:bg-white hover:bg-opacity-30
-                                md:px-3 md:py-1 md:border-0 md:hover:border-b md:hover:bg-transparent md:hover:drop-shadow-lg"
-                                        {% if view_name == 'website:about' %} aria-current="page" {% endif %}
-                                >About</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'website:projects' %}" class="block
-                                py-2 pr-4 pl-3 border-b hover:bg-white hover:bg-opacity-30
-                                md:px-2 md:py-1 md:border-0 md:hover:border-b md:hover:bg-transparent md:hover:drop-shadow-lg"
-                                        {% if view_name == 'website:projects' %} aria-current="page" {% endif %}
-                                >Projects</a>
-                            </li>
-                            <li>
-                                <a href="{% url 'website:contact' %}" class="block
-                                py-2 pr-4 pl-3 border-b hover:bg-white hover:bg-opacity-30
-                                md:px-3 md:py-1 md:border-0 md:hover:border-b md:hover:bg-transparent md:hover:drop-shadow-lg"
-                                        {% if view_name == 'website:contact' %} aria-current="page" {% endif %}
-                                >Contact</a>
-                            </li>
-                        {% endwith %}
-                    </ul>
-                </div>
-            </div>
-        </nav>
+        {% include 'website/components/flowbite/base_navbar.html' with cms_base=cms_base %}
     {% endblock header %}
 </header>
 
@@ -159,7 +81,9 @@
     <div class="w-full h-screen absolute top-0 background-clip-path"></div>
 
     {# ------- Main content ------- #}
-    <div class="w-full absolute top-0">
+    <div class="w-full absolute top-0"
+            {# * BARBA UPDATER CONTAINER #}
+         data-barba="container" data-barba-namespace="base">
         {% block main-content %}
         {% endblock main-content %}
     </div>
