--- a/apps/website/templates/website/components/flowbite/tech_stack.html
+++ b/apps/website/templates/website/components/flowbite/tech_stack.html
@@ -1,4 +1,4 @@
-{# ! DYNAMIC FLOWBITE COMPONENT - Requires Flowbite installed #}
+{# ! DYNAMIC FLOWBITE COMPONENT - Requires Flowbite #}
 
 {% comment %}
 PARAMETERS
@@ -7,8 +7,8 @@ PARAMETERS
 
 {# * -------------------------------- CONTENT ------------------------------- #}
 
-<div class="mb-4">
-    <ul class="flex flex-wrap justify-center items-end text-sm font-medium text-center" id="techTab"
+<div id="techStack" class="mb-4">
+    <ul id="techTab" class="flex flex-wrap justify-center items-end text-sm font-medium text-center"
         data-tabs-toggle="#techTabContent"
         role="tablist">
 
