--- a/apps/website/templates/website/pages/projects_page.html
+++ b/apps/website/templates/website/pages/projects_page.html
@@ -39,11 +39,13 @@ PARAMETERS:
                     <button class="w-full cursor-default rounded-t-lg shadow-lg relative overflow-hidden
                                     md:h-full md:cursor-pointer
                                     md:rounded-lg md:drop-shadow-sm
-                                    md:hover:scale-105 md:duration-300 md:ease-in-out
+                                    md:duration-300 md:ease-in-out
+                                    md:hover:scale-105 md:hover:shadow-lg md:hover:shadow-gray-600
                                     md:group-focus-within:cursor-default md:group-focus-within:w-1/3
                                     md:group-focus-within:rounded-none md:group-focus-within:rounded-l-lg
                                     md:group-focus-within:shadow-lg
-                                    md:group-focus-within:hover:scale-100 md:group-focus-within:transition-none"
+                                    md:group-focus-within:hover:scale-100 md:group-focus-within:hover:shadow-none
+                                    md:group-focus-within:transition-none"
                             onfocus='scrollToIdWithDelay("project-{{ project.id }}", 100)'>
 
                         {# ---- Project image ---- #}
@@ -57,16 +59,27 @@ PARAMETERS:
 
 
                         {# ---- Project Card info ---- #}
-                        <div class="hidden absolute inset-0
-                                    md:flex md:flex-col md:justify-between
+                        <div class="hidden absolute inset-0 md:block
                                     md:group-focus-within:hidden">
 
                             {# Title #}
-                            <div class="w-full h-fit p-2
-                                        font-bold text-white bg-gray-800 bg-opacity-50">
+                            <div class="w-full h-0 px-5 overflow-hidden transition-all duration-300
+                                        flex flex-col justify-center
+                                        font-extrabold text-white bg-gray-800 bg-opacity-50
+                                        {# Animation - Change height on hover #}
+                                        group-hover:h-full ">
                                 <h2>{{ project.title }}</h2>
-                            </div>
 
+                                {# Technologies #}
+                                <div class="w-full p-5 flex flex-row flex-wrap gap-2 justify-center items-center">
+                                    {% for technology in project.technology_set.all %}
+                                        <img class="h-7 object-contain"
+                                             src="{{ technology.logo.url }}"
+                                             alt="{{ technology.name|lower }}">
+                                    {% endfor %}
+                                </div>
+
+                            </div>
 
                         </div>
                     </button>
