--- a/apps/website/templates/website/base.html
+++ b/apps/website/templates/website/base.html
@@ -45,11 +45,17 @@
         <script defer src="{% static 'js/vendor/typed.min.js' %}"></script>
         <script defer src="{% static 'js/vendor/background_animated_gradient.js' %}"></script>
         {# Flowbite script #}
-        <script defer src="https://unpkg.com/flowbite@1.4.7/dist/flowbite.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/flowbite@1.5.3/dist/flowbite.js"
+                integrity="sha256-yu1uuPmePkQFu7xiGLVblZA4DMvd7r4NVHhl0SCD5dw=" crossorigin="anonymous"></script>
         {# Barba script #}
-        <script defer src="https://unpkg.com/@barba/core@2.9.7"></script>
-        {# Gsap animation #}
-        <script defer src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.1/gsap.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/@barba/core@2.9.7/dist/barba.umd.js"
+                integrity="sha256-P8TcQlPC0xAErCcAqxa+p51ZwgDUsL+aaKs0nDgnIZg=" crossorigin="anonymous"></script>
+        {# Gsap transitions script #}
+        <script src="https://cdn.jsdelivr.net/npm/gsap@3.11.1/dist/gsap.min.js"
+                integrity="sha256-+64IAyFjKtTOBukgfvmlNKvR1kiKlqCkM0+naNH5Nxc=" crossorigin="anonymous"></script>
+        {# Lottie animation script #}
+        <script src="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.js"
+                integrity="sha256-maJRZiFl9M6KWEUDMNA7RXjwWhejqmJfnK6fiGe5GGg=" crossorigin="anonymous"></script>
 
         <!-- Main JS -->
         {% compress js %}
