--- a/apps/website/templates/website/components/flowbite/base_navbar.html
+++ b/apps/website/templates/website/components/flowbite/base_navbar.html
@@ -17,7 +17,7 @@ PARAMETERS
               transition-[background-color] ease-in-out duration-300">
     <div class="container h-full flex flex-wrap justify-between items-center mx-auto">
         {# -------- Developer link -------- #}
-        <a href="/apps/website/static" class="flex items-center">
+        <a href="/" class="flex items-center">
             <span class="self-center">{{ cms_base.brand }}</span>
         </a>
         <div class="flex items-center gap-x-3 md:order-2">
