Fixed home page position issues in Firefox

--- a/apps/website/templates/website/pages/home_page.html
+++ b/apps/website/templates/website/pages/home_page.html
@@ -18,7 +18,7 @@
             <div class="container md:h-screen mx-auto flex flex-col">
 
                 {# -------- Logo image -------- #}
-                <img class="max-w-fit max-h-20 md:max-h-36 lg:max-h-44 xl:max-h-52
+                <img class="max-w-fit max-h-20 md:max-h-36 lg:max-h-44 xl:max-h-52 self-start
                 mx-2 mt-10 lg:mt-0
                 translate-y-8 md:translate-y-12 lg:translate-y-24 xl:translate-y-32"
                      src="{% if cms_base.logo %} {{ cms_base.logo.url }}{% else %} {% static 'img/Logo.svg' %} {% endif %}"
@@ -65,7 +65,7 @@
                 <!-- load webp if supported, otherwise load png-->
                 <source srcset="{% if cms_home.dev_photo_webp %}{{ cms_home.dev_photo_webp.url }}
                     {% else %}{% static 'img/developer.webp' %} {% endif %}" type="image/webp">
-                <img class="min-w-fit h-96 md:h-5/6 drop-shadow-[-30px_35px_35px_rgba(0,0,0,0.5)]"
+                <img class="max-w-fit h-96 md:h-5/6 drop-shadow-[-30px_35px_35px_rgba(0,0,0,0.5)]"
                      src="{% if cms_home.dev_photo %} {{ cms_home.dev_photo.url }}
                          {% else %}{% static 'img/developer.png' %} {% endif %}" alt="developer image">
             </picture>
