Added reCaptcha validation on Contact Form

--- a/apps/website/templates/website/base.html
+++ b/apps/website/templates/website/base.html
@@ -57,6 +57,9 @@
         <script src="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.js"
                 integrity="sha256-maJRZiFl9M6KWEUDMNA7RXjwWhejqmJfnK6fiGe5GGg=" crossorigin="anonymous"></script>
 
+        <!-- reCAPTCHA v3 API -->
+        <script data-script-reload="active" src="https://www.google.com/recaptcha/api.js"></script>
+
         <!-- Main JS -->
         {% compress js %}
             <script defer src="{% static 'js/main.js' %}"></script>
