--- a/apps/website/templates/website/base.html
+++ b/apps/website/templates/website/base.html
@@ -57,6 +57,19 @@
         <script src="https://cdn.jsdelivr.net/npm/@lottiefiles/lottie-player@1.5.7/dist/lottie-player.js"
                 integrity="sha256-maJRZiFl9M6KWEUDMNA7RXjwWhejqmJfnK6fiGe5GGg=" crossorigin="anonymous"></script>
 
+        <!-- Google Analytics -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id={{ g_tag_id }}"></script>
+        <script>
+            window.dataLayer = window.dataLayer || [];
+
+            function gtag() {
+                dataLayer.push(arguments);
+            }
+
+            gtag('js', new Date());
+            gtag('config', 'G-0NTD322SN5');
+        </script>
+
         <!-- reCAPTCHA v3 API -->
         <script data-script-reload="active" src="https://www.google.com/recaptcha/api.js"></script>
 
