--- a/apps/website/templates/website/pages/contact_page.html
+++ b/apps/website/templates/website/pages/contact_page.html
@@ -2,9 +2,10 @@
 
 {# LOAD PACKAGES/TAGs #}
 {% load static %}
+{% load i18n %}
 
 {# Website title #}
-{% block title %}Contact | {{ block.super }}{% endblock %}
+{% block title %}{% translate "Contact" %} | {{ block.super }}{% endblock %}
 
 {# -------------------------------- WEBPAGE CONTENT -------------------------------- #}
 {% block main-content %}
@@ -20,14 +21,15 @@
 
         {# -------- Section Content -------- #}
         {# ---- Title ---- #}
-        <h2 class="w-full mb-10 text-4xl text-center lg:text-5xl font-bold leading-tight">Let's talk!</h2>
+        <h2 class="w-full mb-10 text-3xl text-center lg:text-4xl font-bold leading-tight">
+            {% translate "Let's talk!" %}</h2>
 
         {# ---- Contact ---- #}
         <div class="w-full grid gap-8 grid-cols-1 md:grid-cols-2 mx-auto text-gray-900">
 
             <div class="flex flex-col justify-between">
                 <div class="text-center">
-                    <p>Prefer email me?</p>
+                    <p>{% translate "Prefer email me?" %}</p>
                     <p class="text-2xl lg:text-3xl">
                         <a href="mailto:{{ cms_base.email }}"
                            class="bg-clip-text text-transparent bg-gradient-to-r from-blue-700 to-violet-700
