--- a/apps/website/templates/website/components/flowbite/modal_contact_success.html
+++ b/apps/website/templates/website/components/flowbite/modal_contact_success.html
@@ -22,7 +22,7 @@
                         background="transparent"
                         autoplay speed="1"
                 ></lottie-player>
-                <h3 class="text-xl font-bold text-gray-800">Message sent</h3>
+                <h3 class="text-xl font-bold text-gray-800">{% translate "Message sent" %}</h3>
                 <h3 class="mb-5 text-lg font-normal text-gray-500">
                     {% translate "Thanks for contacting me." %}
                 </h3>
