--- a/apps/website/templates/website/pages/projects_page.html
+++ b/apps/website/templates/website/pages/projects_page.html
@@ -117,7 +117,7 @@ PARAMETERS:
                             <a class="py-2 px-8 font-medium border border-blue-600 text-blue-600 rounded-xl
                                         hover:bg-blue-600 hover:text-white transition-all duration-300"
                                href="{{ project.get_absolute_url }}">
-                                <i class="fa-solid fa-circle-plus mr-2"></i>See more</a>
+                                <i class="fa-solid fa-circle-plus mr-2"></i>{% translate "See more" %}</a>
                         </div>
                     </div>
 
