--- a/apps/website/templates/website/pages/contact_page.html
+++ b/apps/website/templates/website/pages/contact_page.html
@@ -42,12 +42,13 @@
                 </div>
 
                 <div class="mt-8 text-center">
-                    <lottie-player
-                            src="{% static 'lottie/send-email.json' %}"
-                            style="height: 400px;"
-                            background="transparent"
-                            autoplay loop speed="1"
-                    ></lottie-player>
+                    <video id="send-email-animation" autoplay loop muted playsinline>
+                        <source src="{% static "img/animations/send_email.webm" %}" type="video/webm">
+                        <source src="{% static "img/animations/send_email.mp4" %}" type="video/mp4">
+                    </video>
+                    <script type="text/javascript">
+                        document.getElementById("send-email-animation").play();
+                    </script>
                 </div>
             </div>
 
