Added a selector component to explicitly set the website language

--- a/apps/website/templates/website/components/flowbite/base_navbar.html
+++ b/apps/website/templates/website/components/flowbite/base_navbar.html
@@ -45,6 +45,9 @@ PARAMETERS
                 </div>
             </a>
 
+            {# -------- Language selector -------- #}
+            {% include "website/components/flowbite/lang_selector.html" %}
+
             {# -------- Menu button -------- #}
             <button id="navbar-mobile-menu" data-collapse-toggle="navbar-menu" type="button"
                     class="inline-flex items-center p-2 text-md rounded-lg md:hidden
