--- a/apps/website/templates/website/errors/400.html
+++ b/apps/website/templates/website/errors/400.html
@@ -2,6 +2,7 @@
 
 {# * LOAD PACKAGES/TAGs #}
 {% load static %}
+{% load i18n %}
 {% load compress %}
 
 {# * Website Title #}
@@ -19,9 +20,9 @@
 
         <div class="w-fit h-fit mx-auto text-center">
             <i class="fa-solid fa-bomb text-8xl text-red-700 m-5"></i>
-            <h1 class="text-xl font-semibold">BAD REQUEST</h1>
+            <h1 class="text-xl font-semibold">{% translate "BAD REQUEST" %}</h1>
             <h2 class="w-full rounded-xl bg-red-300 font-extrabold">Error 400</h2>
-            <p class="px-2">You sent an invalid request, this server cannot understand you.</p>
+            <p class="px-2">{% translate "You sent an invalid request, this server cannot understand you." %}</p>
         </div>
 
     </section>
